@@ -3262,6 +3262,9 @@ AC_SUBST(target_cpu_default)
 
 AC_SUBST_FILE(language_hooks)
 
+sinclude(../config/gcc-lib-path.m4)
+TL_AC_GNU_MAKE_GCC_LIB_PATH
+
 # Echo link setup.
 if test x${build} = x${host} ; then
   if test x${host} = x${target} ; then
